--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,28 +10,28 @@ readme = "README.md"
 python = "^3.9.0"
 
 [tool.poetry.dev-dependencies]
-bandit = "^1.7.1"
-black = "^21.12b0"
-commitizen = "^2.20.3"
-cruft = "^2.10.1"
-flake8-bugbear = "^21.11.29"
+bandit = "^1.7.4"
+black = "^22.3.0"
+commitizen = "^2.24.0"
+cruft = "^2.10.2"
+flake8-bugbear = "^22.4.25"
 flake8-pytest-style = "^1.6.0"
-freezegun = "^1.1.0"
+freezegun = "^1.2.1"
 isort = "^5.10.1"
-mypy = "^0.931"
+mypy = "^0.950"
 pep8-naming = "^0.12.1"
-pre-commit = "^2.16.0"
+pre-commit = "^2.18.1"
 proselint = "^0.13.0"
 pydocstyle = "^6.1.1"
-pytest = "^6.2.5"
+pytest = "^7.1.2"
 pytest-cov = "^3.0.0"
-pytest-mock = "^3.6.1"
+pytest-mock = "^3.7.0"
 safety = "^1.10.3"
 shellcheck-py = "^0.8.0"
 toml = "^0.10.2"
-types-freezegun = "^1.1.5"
-types-setuptools = "^57.4.6"
-types-toml = "^0.10.2"
+types-freezegun = "^1.1.9"
+types-setuptools = "^57.4.14"
+types-toml = "^0.10.6"
 vulture = "^2.3"
 
 [build-system]
