build(workflows): add linting step to workflows and pre-commit
The README now has a working status-badge for the workflow test.yml

This was added by doing a cruft update

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,5 +26,8 @@ jobs:
           python -m pip install --upgrade poetry
           poetry install
 
+      - name: Lint
+        run: ./scripts/lint.sh
+
       - name: Test
         run: ./scripts/test.sh
