--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "gildedrose_refactoring"
-version = "0.0.1"
+version = "0.1.0"
 description = "An attempt at the Gilded Rose Refactoring Kata."
 authors = ["Sonny Valkeneers <sonny@softllama.net>"]
 license = "MIT"
@@ -46,11 +46,11 @@ profile = "black"
 
 [tool.commitizen]
 annotated_tag = true
-bump_message = "bump: $current_version → $new_version [skip-ci]"
+bump_message = "bump: $current_version → $new_version [skip ci]"
 name = "cz_conventional_commits"
 tag_format = "v$version"
 update_changelog_on_bump = true
-version = "0.0.1"
+version = "0.1.0"
 version_files = [
     "pyproject.toml:version",
     "gildedrose_refactoring/__init__.py"
